# FunASR-demo-ncnn

./: .gitmodules  CMakeLists.txt  README.md
Paraformer/: CMakeLists.txt
Paraformer/include/: custom_op.h  model.h  paraformer.h  punct.h  thread_pool.h  vad.h  wav_read.h
Paraformer/src/: main.cpp  paraformer.cpp
SenseVoice/: CMakeLists.txt
SenseVoice/include/: fbank_feat.h  sensevoice.h  thread_pool.h
SenseVoice/src/: fbank_feat.cpp  main.cpp  punct.cpp  sensevoice.cpp  vad.cpp
models/: SenseVoice.json  SenseVoice.param  paraformer-small-decoder.param  paraformer-small-encoder.param  paraformer-small.json  punct.param  vad4.param  vad5.param
